2005-09-12  Erik Hjortsberg  <erik@katastrof.nu>

	* Makefile.am: install the ember script as a script
	* ember.png: updated the icon with the latest from jayr
	* ember: fixed some bugs with the installation

2005-09-12  Erik Hjortsberg  <erik@katastrof.nu>

	* ember: added some debug output and
	* src/components/ogre/EmberOgre.cpp: from resource.cfg, also parse the location of the media
	* services/config/ConfigService.*: added methods for getting the user-specific and shared media
	* src/components/ogre/resources.cfg: added indications where the media might be found (user or shared)

2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>

	* ember: a startup script which copies the needed files and updates the media
	* Makefile.am: make sure that configfile and the ember script are installed

2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberEntity.cpp: update the debug entity bounding box when moving

2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>

	*  media/materials/splatting/Splat.cg, src/components/ogre/TerrainPage.cpp: use the parameter tile to decide how much to tile the texture

2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/scripts/environment.material, media/materials/scripts/OffsetMapping.cg: if a parameter in a Cg program is not used, it's apparently removed from the function's prototype. fixed this
	* media/materials/scripts/vegetation.material: use  a high detail texture for the oak, since it makes such a big difference

2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/model/XMLModelDefinitionSerializer.cpp: removed preloading of all parsed meshes

2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>

	* media/materials/scripts/environment.material: added new ground material and fixed a bug with the ploughed field

2005-09-11  Erik Hjortsberg  <erik@katastrof.nu>

	* make_dist_media.sh.in: some fixes to the media fetching
	* configfile: updated the location of the media
