@@ -1,5 +1,9 @@
 2005-09-12  Erik Hjortsberg  <erik@katastrof.nu>
 
+	* src/components/ogre/model/Model.cpp: update attached objects position even when not animated, else when a non-animated model moved the attached entites wouldn't move with it
+
+2005-09-12  Erik Hjortsberg  <erik@katastrof.nu>
+
 	* Makefile.am: install the ember script as a script
 	* ember.png: updated the icon with the latest from jayr
 	* ember: fixed some bugs with the installation
